<resources>
    <string name="app_name">Bismilllah ASS1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pra_assessment1">Pra Assessment 1</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="alas_segitiga">Alas Segitiga</string>
    <string name="masukkan__alas">Masukkan Alas Segitiga</string>
    <string name="tinggi_segitiga">Tinggi Segitiga</string>
    <string name="masukkan_tinggi_segitiga">Masukkan Tinggi Segitiga</string>
    <string name="hitung">Hitung</string>
    <string name="luas_segitiga">Luas Segitiga</string>
    <string name="keliling_segitiga">Keliling Segitiga</string>
    <string name="share">Share</string>
    <string name="panjang_persegi_panjang">Panjang Persegi Panjang</string>
    <string name="masukkan_panjang">Masukkan Panjang</string>
    <string name="lebar_persegi_panjang">Lebar Persegi Panjang</string>
    <string name="masukkan_lebar">Masukkan Lebar</string>
    <string name="luas_persegi_panjang">Luas Persegi Panjang</string>
    <string name="keliling_persegi_panjang">Keliling Persegi Panjang</string>
    <string name="namaku">Arinda Meika Putri</string>
    <string name="nimku">6706181039</string>
    <string name="kelasku">D3IF-42-02</string>
    <string name="about_me">About Me</string>
</resources>
