<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="206dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="267dp" />

            <TextView
                android:id="@+id/alasSegitiga_textView"
                style="@style/judulInputan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/alas_segitiga"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/alasSegitiga_editText"
                style="@style/inputanAngka"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan__alas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alasSegitiga_textView" />

            <TextView
                android:id="@+id/tinggiSegitiga_textView"
                style="@style/judulInputan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tinggi_segitiga"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alasSegitiga_editText" />

            <EditText
                android:id="@+id/tinggiSegitiga_editText"
                style="@style/inputanAngka"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/masukkan_tinggi_segitiga"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tinggiSegitiga_textView" />

            <Button
                android:id="@+id/hitung_button"
                style="@style/buttonHitung"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hitung"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tinggiSegitiga_editText" />

            <TextView
                android:id="@+id/judulLuasSegitiga_textView"
                style="@style/judulInputan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/luas_segitiga"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:id="@+id/kelilingSegitiga_textView"
                style="@style/judulInputan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/keliling_segitiga"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/judulLuasSegitiga_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/judulLuasSegitiga_textView" />

            <TextView
                android:id="@+id/hasilLuasSgt_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/judulLuasSegitiga_textView"
                tools:text="0" />

            <TextView
                android:id="@+id/hasilKelilingSgt_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                app:layout_constraintBottom_toBottomOf="@+id/hasilLuasSgt_textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/hasilLuasSgt_textView"
                tools:text="0" />

            <Button
                android:id="@+id/share_button"
                style="@style/buttonJudul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hasilLuasSgt_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>